<resources>
    <string name="app_name">Team Roster</string>
    <string name="player_name_format">%1$s %2$s</string>
    <string name="roster_position_format">Position: %1$s</string>
    <string name="jersey_format">Wearing #: %1$s</string>
    <string name="roster_title">West Side Walkers</string>
    <string name="add_player_txt">Add Player</string>
    <string name="no_players_found_msg">NO PLAYERS FOUND.</string>
    <string name="add_players">Add Players</string>
    <string name="enter_player_info">Enter Player Info</string>
    <string name="first_name_hint">Enter Fist Name</string>
    <string name="last_name_hint">Enter Last Name</string>
    <string name="jersey_hint">Jersey #</string>
    <string name="bio_hint">Enter Player Bio</string>
    <string name="position_hint">Player Position</string>
    <string name="photo_url_hint">Profile Photo Url</string>
    <string name="delete_player_confirmation_msg">Are you sure you want to delete %1$s %2$s from the roster?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="player_add_success_msg">Player added to Roster!</string>
    <string name="title_activity_player_details">Player Profile</string>
    <string name="title_activity_add_player">Create Player Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
